crates/gql_codegen_core/src/generators/snapshots/gql_codegen_core__generators__typescript__tests__generate_schema_types_immutable.snap
---
source: crates/gql_codegen_core/src/generators/typescript.rs
expression: result
---
// Generated by gql-codegen

export type Maybe<T> = T | null;

export interface Query {
  readonly user: Maybe<User>;
  readonly users: Array<User>;
}

export interface Mutation {
  readonly createUser: User;
}

export interface User {
  readonly id: string;
  readonly name: string;
  readonly email: Maybe<string>;
  readonly posts: Array<Post>;
}

export interface Post {
  readonly id: string;
  readonly title: string;
  readonly body: string;
  readonly author: User;
}

export interface CreateUserInput {
  readonly name: string;
  readonly email?: Maybe<string>;
}

export enum Status {
  ACTIVE = 'ACTIVE',
  INACTIVE = 'INACTIVE',
  PENDING = 'PENDING',
}
