crates/gql_codegen_core/src/generators/snapshots/gql_codegen_core__generators__typescript__tests__generate_schema_types_with_enums_as_const.snap
---
source: crates/gql_codegen_core/src/generators/typescript.rs
expression: result
---
export type Maybe<T> = T | null;

export interface Query {
  __typename: 'Query';
  user: Maybe<User>;
  users: Array<User>;
}

export interface Mutation {
  __typename: 'Mutation';
  createUser: User;
}

export interface User {
  __typename: 'User';
  id: string;
  name: string;
  email: Maybe<string>;
  posts: Array<Post>;
}

export interface Post {
  __typename: 'Post';
  id: string;
  title: string;
  body: string;
  author: User;
}

export interface CreateUserInput {
  name: string;
  email?: Maybe<string>;
}

export enum Status {
  ACTIVE = 'ACTIVE',
  INACTIVE = 'INACTIVE',
  PENDING = 'PENDING',
}
